--- a/site/index.html
+++ b/site/index.html
@@ -1,37 +1,352 @@
 <!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap" rel="stylesheet">
+    <title>Home - IaraGames</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+<body>
+    <header id="header">
+    <nav id="nav" class="nav-bar">
+        <div class="logo">
+            <img src="../image/logo.svg" alt="" width="130px" height="130px">
+        </div>
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>NGINX on Railway</title>
-    <meta name="description" content="Choo Choo!" />
+        <div class="nav-list" id="nav">
+            <button id="button_mob">
+                <span id="hamburgue"> </span>
+            </button>   
+            <ul class="menu">
+                <li class="nav-item"><a class="nav-link" href="index.html" class="active" id="home">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="listagem_usuarios.html">Listagem de Usuários</a></li>
+                <li class="nav-item"><a class="nav-link" href="cadastrar_usuarios.html">Cadastrar Usuário</a></li>
+                <li class="nav-item"><a class="nav-link" href="listagem_jogos.html">Listagem de Jogos</a></li>
+                <li class="nav-item"><a class="nav-link" href="cadastrar_jogos.html">Cadastrar Jogos</a></li>
+                <li class="nav-item"><a class="nav-link" href="login.html">Sair</a></li>
+            </ul>
+        </div>
+       
+    </nav>
+</header>
 
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<div class="carrosel">
+    <div id="back" class="setas"><i class="fa-solid fa-circle-chevron-left"></i></div>
+    <div id="next" class="setas"><i class="fa-solid fa-circle-chevron-right"></i> </div>
+    <section class="home">
+        <div class="home-text">
+            <div class="text1">
+                <h2>Seja bem-vindo(a)</h2>
+            </div>
+            <div class="text2">
+                <p>Este é o sistema IaraGames onde você poderá (até o momento), cadastrar Usuários e Jogos bem como listar tudo o que já foi cadastrado.</p>
+            </div>
+            <div class="main-btn">
+                <a href="http://127.0.0.1:5500/cadastrar_usuarios.html"
+                    class="btnget">Comece Já!</a>
+            </div>
+        </div>
+   
+        <div class="home-img">
+            <img src="../image/logoaguia.svg" alt="">
+        </div>
+    </section>
+    <div class="nav-manual">
+        <label for="radio1" class="btn-manual" id="checked"></label>
+        <label for="radio2" class="btn-manual"></label>
+        <label for="radio3" class="btn-manual"></label>
+    </div>
+</div>
 
-    <link rel="stylesheet" href="/styles.css?v=1.0" />
-  </head>
+<div class="textoinicial">
+    <h1>Porque Iara Games?</h1>
+    <p>Somos parceiros de todos os consoles</p>
+</div>
 
-  <body>
-    <main>
-      <img
-        src="https://railway.app/brand/logo-light.svg"
-        alt="Railway logo"
-        class="logo"
-      />
+<section class="diferenciais">
+    <div class="icon">
+        <img src="../image/controle.svg" alt="" id="imagecontrole">
+        <p>+ de 13000 jogos <br>disponíveis</p>
+    </div>
+    <div class="icon">
+        <img src="../image/icon.svg" alt="">
+        <p>Confiável e avaliado por <br>todos os nossos clientes</p>
+    </div>
+    <div class="icon">
+        <img src="../image/game.svg" alt="">
+        <p>Disponível para todos os </p>
+        <p>consoles</p>
+    </div>
+</section>
 
-      <h1>NGINX on Railway</h1>
+<div class="generos">
+    <h1>Gêneros</h1>
+    <li>Ver todos</li>
+</div>
+<section class="imgjogospai">
+    <div class="imgjogos" id="imgjogos1">
+    </div>
+    <div class="imgjogos" id="imgjogos2">
+    </div>
+    <div class="imgjogos" id="imgjogos3">
+    </div>
+    <div class="imgjogos" id="imgjogos4">
+    </div>
+    <div class="imgjogos" id="imgjogos5">
+    </div>
+    <div class="imgjogos" id="imgjogos6">
+    </div>
+</section>
 
-      <p>
-        Choo Choo! This is an example of an NGINX static site running on
-        Railway.
-        <a
-          href="https://github.com/railwayapp/starters/tree/master/examples/nginx"
-          >View source</a
-        >.
-      </p>
-    </main>
+<div class="Lanxxx">
+    <h1>Lançamentos</h1>
+</div>
+<section class="Lanximgs">
+    <div class="card" style="width: 18rem;">
+        <img src="../image/minecraft.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h4>Minecraft</h4>
+            <div class="desconto">
+                <p class="card-text">R$ 100,00</p>
+                <p><span class="porcento">90%</span><span class="tachado">R$ 130,00<span></p>
+            </div>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="../image/asphault.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h4>Asphalt 9: Legends</h4>
+            <div class="desconto">
+                <div class="Download">
+                    <button><a href="Login.html">Download Gratuito</a>
+                    </button>
+                </div>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="../image/the whitcher.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h4>The Witcher 3</h4>
+            <div class="desconto">
+                <p class="card-text">R$ 100,00</p>
+                <p><span class="porcento">90%</span><span class="tachado">R$ 130,00<span></p>
+            </div>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="../image/surving mars.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h4>Surving Mars</h4>
+            <div class="desconto">
+                <p class="card-text">R$ 100,00</p>
+                <p></p>
+            </div>
+        </div>
+    </div>
+</section>
+<div class="Lanxxx">
+    <h1>Popular Games</h1>
+    <li>Ver todos</li>
+</div>
+<section class="Lanximgs">
+    <div class="card" style="width: 18rem;">
+        <img src="../image/grad.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h4>GTA V</h4>
+            <div class="desconto">
+                <p class="card-text">R$ 100,00</p>
+                <p><span class="porcento">90%</span><span class="tachado">R$ 130,00<span></p>
+            </div>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="../image/roblox.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h4>ROBLOX</h4>
+            <div class="desconto">
+                <div class="Download">
+                    <button><a href="Login.html">Download Gratuito</a>
+                    </button>
+                </div>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="../image/s8.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h4>NBA 2K22</h4>
+            <div class="desconto">
+                <p class="card-text">R$ 100,00</p>
+                <p><span class="porcento">90%</span><span class="tachado">R$ 130,00<span></p>
+            </div>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="../image/deadby.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h4>Dead by Daylight</h4>
+            <div class="desconto">
+                <p class="card-text">R$ 100,00</p>
+                <p><span class="porcento">90%</span><span class="tachado">R$ 130,00<span></p>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="Lanximgs" id="lanxespaco">
+    <div class="card" style="width: 18rem;">
+        <img src="../image/arka.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h4>ARK: Survival Evolved</h4>
+            <div class="desconto">
+                <p class="card-text">R$ 100,00</p>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="../image/rocket.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h4>Rocket League</h4>
+            <div class="desconto">
+                <div class="Download">
+                    <button><a href="Login.html">Download Gratuito</a>
+                    </button>
+                </div>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="../image/forzahorizon.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h4>Forza Horizon 5</h4>
+            <div class="desconto">
+                <p class="card-text">R$ 100,00</p>
+                <p><span class="porcento">90%</span><span class="tachado">R$ 130,00<span></p>
+            </div>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="../image/cities.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h4>Cities: Skylines</h4>
+            <div class="desconto">
+                <p class="card-text">R$ 100,00</p>
+                <p></p>
+            </div>
+        </div>
+    </div>
+</section>
 
-    <script src="/script.js"></script>
-  </body>
+<div class="sliderfundo">
+    <div class="fundo">
+        <h1>Em breve na Iara Games:</h1>
+            <div class="embreve">
+                <div id="games01"></div>
+            </div>
+            <div class="embreve">
+                <div id="games02"></div>
+            </div>
+        </div>
+        <div class="fundolado">
+            <div class="embreve">
+                <div id="games03"></div>
+            </div>
+            <div class="embreve">
+                <div id="games04"></div>
+            </div>
+            <div class="embreve">
+                <div id="games05"></div>
+            </div>
+        </div>
+    </div>
+    <div class="clientes">
+        <h1>+ de 12.000 clientes satisfeitos</h1>
+        <p>Veja o que nossos clientes tem a dizer sobre a Iara </br>
+            Games, a maior plataforma game do Brasil:</p>
+    </div>
+    <section class="cardsclientes">
+        <div class="card-cliente" id="card-cliente2">
+        </div>
+        <div class="card-cliente" id="card-cliente1">
+        </div>
+        <div class="card-cliente" id="card-cliente3">
+        </div>
+    </section>
+
+    <div class="nav-manual">
+        <label for="radio1" class="btn-manual" id="checked"></label>
+        <label for="radio2" class="btn-manual"></label>
+        <label for="radio3" class="btn-manual"></label>
+    </div>
+
+    <footer>
+        <div class="logo-rodape">
+            <img src="../image/logo.svg" alt="Logo site" id="logo" width="225" />
+        </div>
+        <div class="caixa-rodape">
+            <h2 class="title-roda">Menu</h2>
+            <ul>
+                <li><a href="...">Home</a></li>
+                <li><a href="...">Loja de jogos</a></li>
+                <li><a href="...">Fórum</a></li>
+                <li><a href="...">Suporte</a></li>
+                <li><a href="...">Contato</a></li>
+            </ul>
+        </div>
+        <div class="caixa-rodape">
+            <h2 class="title-roda">Outros</h2>
+            <ul>
+                <li><a href="...">Nosso Blog Blog</a></li>
+                <li><a href="...">Privacidade</a></li>
+                <li><a href="...">Documentação</a></li>
+                <li><a href="...">Política de Privacidade</a></li>
+            </ul>
+        </div>
+        <div class="caixa-rodape" id="social-rodape">
+            <h2 class="title-roda">Sigam as redes</h2>
+            <ul>
+                <li><button class="bt-redes" id="bt_1"
+                        onclick="location.href='https://www.instagram.com/store_couplecake/';"
+                        value="Go to instagram">
+                        <i class="fa-brands fa-square-instagram"></i>
+                    </button>
+                    <button class="bt-redes" id="bt_2"
+                        onclick="location.href='https://www.facebook.com/Couplecake-106421932083910?_rdc=1&_rdr/';"
+                        value="Go to facebook">
+                        <i class="fa-brands fa-facebook-square"></i>
+                    </button>
+                    <button class="bt-redes" id="bt_3"
+                        onclick="location.href='https://api.whatsapp.com/send?phone=5511988592266&text=Ol%C3%A1%20quero%20ver%20o%20card%C3%A1pio/';"
+                        value="Go to whatssap">
+                        <i class="fa-brands fa-whatsapp-square"></i>
+                    </button>
+                    <button class="bt-redes" id="bt_4"
+                        onclick="location.href='https://api.whatsapp.com/send?phone=5511988592266&text=Ol%C3%A1%20quero%20ver%20o%20card%C3%A1pio/';"
+                        value="Go to whatssap">
+                        <i class="fa-brands fa-square-twitter"></i>
+                    </button>
+                </li>
+            </ul>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/78e3b8eb13.js" crossorigin="anonymous"></script>
+<script>
+    // Simulação de nome de usuário logado
+    document.addEventListener('DOMContentLoaded', function() {
+        document.getElementById('userName').innerText = 'Nome do Usuário';
+    });
+</script>
+</body>
 </html>
