--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap" rel="stylesheet">
     <title>Home - IaraGames</title>
@@ -14,7 +14,7 @@
     <header id="header">
     <nav id="nav" class="nav-bar">
         <div class="logo">
-            <img src="../image/logo.svg" alt="" width="130px" height="130px">
+            <img src="./image/logo.svg" alt="" width="130px" height="130px">
         </div>
 
         <div class="nav-list" id="nav">
@@ -52,7 +52,7 @@
         </div>
    
         <div class="home-img">
-            <img src="../image/logoaguia.svg" alt="">
+            <img src="./image/logoaguia.svg" alt="">
         </div>
     </section>
     <div class="nav-manual">
@@ -69,15 +69,15 @@
 
 <section class="diferenciais">
     <div class="icon">
-        <img src="../image/controle.svg" alt="" id="imagecontrole">
+        <img src="./image/controle.svg" alt="" id="imagecontrole">
         <p>+ de 13000 jogos <br>disponíveis</p>
     </div>
     <div class="icon">
-        <img src="../image/icon.svg" alt="">
+        <img src="./image/icon.svg" alt="">
         <p>Confiável e avaliado por <br>todos os nossos clientes</p>
     </div>
     <div class="icon">
-        <img src="../image/game.svg" alt="">
+        <img src="./image/game.svg" alt="">
         <p>Disponível para todos os </p>
         <p>consoles</p>
     </div>
@@ -107,7 +107,7 @@
 </div>
 <section class="Lanximgs">
     <div class="card" style="width: 18rem;">
-        <img src="../image/minecraft.svg" class="card-img-top" alt="...">
+        <img src="./image/minecraft.svg" class="card-img-top" alt="...">
         <div class="card-body">
             <h4>Minecraft</h4>
             <div class="desconto">
@@ -117,7 +117,7 @@
         </div>
     </div>
     <div class="card" style="width: 18rem;">
-        <img src="../image/asphault.svg" class="card-img-top" alt="...">
+        <img src="./image/asphault.svg" class="card-img-top" alt="...">
         <div class="card-body">
             <h4>Asphalt 9: Legends</h4>
             <div class="desconto">
@@ -130,7 +130,7 @@
         </div>
     </div>
     <div class="card" style="width: 18rem;">
-        <img src="../image/the whitcher.svg" class="card-img-top" alt="...">
+        <img src="./image/the whitcher.svg" class="card-img-top" alt="...">
         <div class="card-body">
             <h4>The Witcher 3</h4>
             <div class="desconto">
@@ -140,7 +140,7 @@
         </div>
     </div>
     <div class="card" style="width: 18rem;">
-        <img src="../image/surving mars.svg" class="card-img-top" alt="...">
+        <img src="./image/surving mars.svg" class="card-img-top" alt="...">
         <div class="card-body">
             <h4>Surving Mars</h4>
             <div class="desconto">
@@ -156,7 +156,7 @@
 </div>
 <section class="Lanximgs">
     <div class="card" style="width: 18rem;">
-        <img src="../image/grad.svg" class="card-img-top" alt="...">
+        <img src="./image/grad.svg" class="card-img-top" alt="...">
         <div class="card-body">
             <h4>GTA V</h4>
             <div class="desconto">
@@ -166,7 +166,7 @@
         </div>
     </div>
     <div class="card" style="width: 18rem;">
-        <img src="../image/roblox.svg" class="card-img-top" alt="...">
+        <img src="./image/roblox.svg" class="card-img-top" alt="...">
         <div class="card-body">
             <h4>ROBLOX</h4>
             <div class="desconto">
@@ -179,7 +179,7 @@
         </div>
     </div>
     <div class="card" style="width: 18rem;">
-        <img src="../image/s8.svg" class="card-img-top" alt="...">
+        <img src="./image/s8.svg" class="card-img-top" alt="...">
         <div class="card-body">
             <h4>NBA 2K22</h4>
             <div class="desconto">
@@ -189,7 +189,7 @@
         </div>
     </div>
     <div class="card" style="width: 18rem;">
-        <img src="../image/deadby.svg" class="card-img-top" alt="...">
+        <img src="./image/deadby.svg" class="card-img-top" alt="...">
         <div class="card-body">
             <h4>Dead by Daylight</h4>
             <div class="desconto">
@@ -201,7 +201,7 @@
 </section>
 <section class="Lanximgs" id="lanxespaco">
     <div class="card" style="width: 18rem;">
-        <img src="../image/arka.svg" class="card-img-top" alt="...">
+        <img src="./image/arka.svg" class="card-img-top" alt="...">
         <div class="card-body">
             <h4>ARK: Survival Evolved</h4>
             <div class="desconto">
@@ -211,7 +211,7 @@
         </div>
     </div>
     <div class="card" style="width: 18rem;">
-        <img src="../image/rocket.svg" class="card-img-top" alt="...">
+        <img src="./image/rocket.svg" class="card-img-top" alt="...">
         <div class="card-body">
             <h4>Rocket League</h4>
             <div class="desconto">
@@ -224,7 +224,7 @@
         </div>
     </div>
     <div class="card" style="width: 18rem;">
-        <img src="../image/forzahorizon.svg" class="card-img-top" alt="...">
+        <img src="./image/forzahorizon.svg" class="card-img-top" alt="...">
         <div class="card-body">
             <h4>Forza Horizon 5</h4>
             <div class="desconto">
@@ -234,7 +234,7 @@
         </div>
     </div>
     <div class="card" style="width: 18rem;">
-        <img src="../image/cities.svg" class="card-img-top" alt="...">
+        <img src="./image/cities.svg" class="card-img-top" alt="...">
         <div class="card-body">
             <h4>Cities: Skylines</h4>
             <div class="desconto">
@@ -289,7 +289,7 @@
 
     <footer>
         <div class="logo-rodape">
-            <img src="../image/logo.svg" alt="Logo site" id="logo" width="225" />
+            <img src="./image/logo.svg" alt="Logo site" id="logo" width="225" />
         </div>
         <div class="caixa-rodape">
             <h2 class="title-roda">Menu</h2>
