--- a/site/listagem_jogos.html
+++ b/site/listagem_jogos.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,7 +20,7 @@
     <header id="header">
       <nav id="nav" class="nav-bar">
         <div class="logo">
-          <img src="../image/logo.svg" alt="" width="130px" height="130px" />
+          <img src="./image/logo.svg" alt="" width="130px" height="130px" />
         </div>
 
         <div class="nav-list" id="nav">
@@ -80,7 +80,7 @@
     </div>
     <footer>
       <div class="logo-rodape">
-        <img src="../image/logo.svg" alt="Logo site" id="logo" width="225" />
+        <img src="./image/logo.svg" alt="Logo site" id="logo" width="225" />
       </div>
       <div class="caixa-rodape">
         <h2 class="title-roda">Menu</h2>
