--- a/site/cadastrar_usuarios.html
+++ b/site/cadastrar_usuarios.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,7 +19,7 @@
   <header id="header">
     <nav id="nav" class="nav-bar">
       <div class="logo">
-        <img src="../image/logo.svg" alt="" width="130px" height="130px" />
+        <img src="./image/logo.svg" alt="" width="130px" height="130px" />
       </div>
 
       <div class="nav-list" id="nav">
